# nxp-bridge

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  NxpBridge.podspec  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
Helpers/: ExceptionLogHelper.cs  GlobalHelper.cs  Helpers.csproj  JsonConverterHelper.cs  RtcAccuracyHelper.cs  SvgToPngHelper.cs  TimeSpanHelper.cs  TimerHelper.cs
Msg/: CommandHandler.cs  Lib.cs  Msg.csproj  ResponseHandler.cs
Msg/Models/: DataInToOut.cs  HumidityConfigModel.cs  HumidityDataModel.cs  NdefMimeTypeModel.cs  NdefTextModel.cs  NdefUrlModel.cs  TagModel.cs  TemperatureDataModel.cs
Ndef/: INdef.shared.cs  Ndef.csproj  NdefImplementation.android.cs  NdefImplementation.ios.cs  NdefImplementation.mac.cs
Ndef/Shared/: Ios12Minus.cs  Ios13Plus.cs  PcscDevice.cs  TagReaderStatusChangedEventArgs.cs
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/nxpbridge/: NxpBridgeModule.kt  NxpBridgePackage.kt
cpp/: react-native-nxp-bridge.cpp  react-native-nxp-bridge.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/NxpBridgeExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: NxpBridge.h  NxpBridge.mm  Podfile
scripts/: build-xamarin-plugin.sh  create-mock-dlls.sh  fix-build-issues.sh  init-repo.sh  integrate-xamarin.sh  setup-project.sh
src/: NativeNxpBridge.ts  index.tsx
(+8 files in other folders)
